--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "set_builder"
 version = "1.0.0"
 edition = "2021"
+description = "A procedural macro to create Iterators over a set defined by Haskell-inspired set-builder notation."
+license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/Vonr/set_builder"
+repository = "https://github.com/Vonr/set_builder"
+keywords = ["set", "haskell", "proc-macro", "macro"]
 include = ["src/**/*", "README.md"]
 
 [lib]
