--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "set_builder"
-version = "3.0.1"
+version = "4.0.0"
 edition = "2021"
 description = "A procedural macro to create Iterators over a set defined by Haskell-inspired set-builder notation."
 license = "MIT"
@@ -19,6 +19,7 @@ proc-macro = true
 syn = { version = "2.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
+proc-macro-error = "1.0"
 
 [dev-dependencies]
 trybuild = "1.0"
